daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet

metadata:
        name: nginx-daemonset
        namespace: kubeapps
        labels:
                app: nginx
spec:
        selector:
                matchLabels:
                        app: nginx
        template:
                metadata:
                        labels:
                                app: nginx


                spec:
                        containers:
                        - name: nginx
                          image: nginx:1.14.2
                          ports:
                          - containerPort: 80
