statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
        name: nginx-statefulset
        namespace: kubeapps
        labels:
                app: nginx
spec:
        replicas: 2
        serviceName: "nginx-app"
        selector:
                matchLabels:
                        app: nginx
        template:
                metadata:
                        labels:
                                app: nginx


                spec:
                        containers:
                        - name: nginx
                          image: nginx:1.14.2
                          ports:
                          - containerPort: 80

                          volumeMounts:
                          - name: counter
                            mountPath: /mydata

        volumeClaimTemplates:
        - metadata:
            name: counter
          spec:
            accessModes: ["ReadWriteOnce"]
            storageClassName: premium
            resources:
              requests:
                storage: 50Mi
